--- a/index.html
+++ b/index.html
@@ -10,14 +10,53 @@
 </head>
 
 <body class="lg:min-w-[1280px]">
-    <header class="max-w-[1171px] lg:mx-auto mx-5">
-
+    <!------------------ Header section ------------------>
+    <header class="max-w-[1171px] lg:mx-auto mx-5 lg:mt-12">
+        <nav class="navbar bg-base-100">
+            <div class="navbar-start">
+                <div class="dropdown">
+                    <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M4 6h16M4 12h8m-8 6h16" />
+                        </svg>
+                    </div>
+                    <ul tabindex="0"
+                        class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Destination</a></li>
+                        <li><a href="#">Search</a></li>
+                    </ul>
+                </div>
+                <a class=" lg:font-extrabold font-semibold md:text-4xl text-xl text-nowrap">Alpha-Ticket</a>
+            </div>
+            <div class="navbar-center hidden lg:flex">
+                <ul class="menu menu-horizontal px-1 text-[18px]">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Destination</a></li>
+                    <li><a href="#">Search</a></li>
+                </ul>
+            </div>
+            <div class="navbar-end">
+                <a
+                    class="btn hover:bg-[#1dd1001a] text-xl font-bold bg-[#1dd1001a] text-[#1DD100] border border-[#1dd10066]">Bus
+                    <img src="./images/bus-icon.png" alt=""></a>
+            </div>
+        </nav>
     </header>
+    <!---------------Main section  --------------->
     <main class="max-w-[1171px] lg:mx-auto mx-5">
 
     </main>
     <footer>
-
+        <style>
+            color {
+                color: #1dd1001a;
+            }
+        </style>
     </footer>
     <script src="scriptJs/script.js"></script>
     <script src="scriptJs/index.js"></script>
