--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </style>
 </head>
 
-<body class="lg:min-w-[1280px] md:min-w-[930px]">
+<body class="md:min-w-[1280px] max-[500px]:min-w-[500px]">
     <!------------------ Header section ------------------>
     <header class="max-w-[1171px] lg:mx-auto mx-5 lg:mt-12 font-raleway">
         <nav class="navbar bg-base-100">
@@ -64,9 +64,9 @@
         </nav>
     </header>
     <!---------------Main section  --------------->
-    <main class="max-w-[1171px] lg:mx-auto mx-5 mt-5 font-inter">
+    <main class=" mt-5 font-inter transition duration-500">
         <!-------------------- Banner section -------------------->
-        <section>
+        <section class="max-w-[1171px] lg:mx-auto mx-5">
             <div
                 class="banner-bg max-w-[1171px] h-[550px] relative rounded-3xl bg-center text-center text-white md:pt-16 p-6 lg:space-y-9 space-y-6">
 
@@ -80,7 +80,7 @@
                         Ticket</a>
                 </div>
                 <div
-                    class="-ml-5 absolute transition-all md:-bottom-12 -bottom-1/2 text-black w-full flex md:flex-row flex-col justify-center items-center gap-6">
+                    class="-ml-5 absolute transition-all md:-bottom-12 -bottom-1/3 text-black w-full flex md:flex-row flex-col justify-center items-center gap-6">
                     <!-- card-1 -->
                     <div
                         class="flex items-center justify-center border border-[#22212121] hover:shadow-lg gap-3 p-7 bg-white rounded-2xl border-b-[3px] border-b-[#1DD100]">
@@ -114,40 +114,42 @@
             </div>
         </section>
         <!--------------- Offer section --------------->
-        <section class="lg:mt-32 md:mt-24 mt-80 text-center lg:space-y-12 space-y-7">
-            <h1 class="text-center md:text-4xl font-bold text-2xl">Best offers for you</h1>
+        <section class="lg:mt-32 mt-56 text-center lg:space-y-12 space-y-7 max-w-[1171px] lg:mx-auto mx-5">
+            <h1 class="text-center text-4xl font-bold">Best offers for you</h1>
             <div class="flex md:flex-row flex-col gap-6">
                 <!------------------ card-1 ------------------>
-                <div class="md:w-1/2 w-full bg-[#FFBF0F] rounded-2xl flex">
-                    <div class="p-12 mr-12 space-y-4">
-                        <h1 class="text-4xl text-start font-extrabold">15% OFF</h1>
-                        <h4 class="font-bold "> on your next purchase</h4>
-                        <p class="">use by January 2024</p>
+                <div class="md:w-1/2 w-full bg-[#FFBF0F] rounded-2xl flex ">
+                    <div class="lg:p-12 p-7 lg:mr-6 flex justify-center items-center">
+                        <div class="space-y-4">
+                            <h1 class="md:text-4xl text-3xl text-start font-extrabold">15% OFF</h1>
+                            <h4 class="font-bold text-nowrap"> on your next purchase</h4>
+                            <p class="">use by January 2024</p>
+                        </div>
                     </div>
-                    <div class="border-dashed border-r-2 mt-[35px] pb-5 relative h-[70%]">
-                        <div class="absolute rounded-full w-[3.25rem] h-[3.25rem] bg-white -ml-6 -top-[60px]"></div>
-                        <div class="absolute rounded-full w-[3.25rem] h-[3.25rem] bg-white -ml-6 -bottom-[60px]"></div>
-                    </div>
-                    <div class="py-16 px-12 space-y-4">
-                        <h1 class="text-3xl font-bold font-raleway ">NEW15</h1>
-                        <p>Coupon Code</p>
+                    <img src="./images/cupon-devider.png" alt="">
+                    <div class="py-12 flex justify-center items-center px-6 lg:px-12 ">
+                        <div class="space-y-4">
+                            <h1 class="md:text-3xl text-2xl font-bold font-raleway ">NEW15</h1>
+                            <p>Coupon Code</p>
+                        </div>
                     </div>
 
                 </div>
                 <!------------------ card-2 ------------------>
                 <div class="md:w-1/2 w-full bg-[#F78C9C] rounded-2xl flex">
-                    <div class="p-12 mr-12 space-y-4">
-                        <h1 class="text-4xl text-start font-extrabold">20% OFF</h1>
-                        <h4 class="font-bold"> on your next purchase</h4>
-                        <p class="">use by January 2024</p>
+                    <div class="lg:p-12 p-7 lg:mr-6 flex justify-center items-center ">
+                        <div class="space-y-4">
+                            <h1 class="md:text-4xl text-3xl text-start font-extrabold">20% OFF</h1>
+                            <h4 class="font-bold text-nowrap"> on your next purchase</h4>
+                            <p class="">use by January 2024</p>
+                        </div>
                     </div>
-                    <div class="border-dashed border-r-2 mt-[35px] pb-5 relative h-[70%]">
-                        <div class="absolute rounded-full w-[3.25rem] h-[3.25rem] bg-white -ml-6 -top-[60px]"></div>
-                        <div class="absolute rounded-full w-[3.25rem] h-[3.25rem] bg-white -ml-6 -bottom-[60px]"></div>
-                    </div>
-                    <div class="py-16 px-12 space-y-4">
-                        <h1 class="text-3xl font-bold ">Couple 20</h1>
-                        <p>Coupon Code</p>
+                    <img src="./images/cupon-devider.png" alt="">
+                    <div class="py-12 flex justify-center items-center px-6 lg:px-12 ">
+                        <div class="space-y-4">
+                            <h1 class="md:text-3xl text-2xl font-bold ">Couple 20</h1>
+                            <p>Coupon Code</p>
+                        </div>
                     </div>
 
                 </div>
@@ -157,8 +159,19 @@
             </button>
         </section>
         <!------------- Buy ticket section ------------->
-        <section id="buyTicket">
+        <section id="buyTicket"
+            class="lg:mt-32 mt-10 bg-[#F7F8F8] w-full rounded-t-[84px] py-6 lg:py-32 border-t-2 border-[#1DD100]">
+            <div class="max-w-[1171px] lg:mx-auto mx-5 space-y-5">
+                <h1 class="text-4xl text-center font-bold">Alpha Paribahan</h1>
+                <P class="max-w-2xl mx-auto text-center">Get ready to explore! Reserve your seat with Alpha Paribahan
+                    today for a hassle-free journey to your destination.</P>
+                <div>
 
+                </div>
+                <div>
+
+                </div>
+            </div>
         </section>
     </main>
     <!------------------ Footer section ------------------>
