--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </style>
 </head>
 
-<body class="md:min-w-[1280px] max-[500px]:min-w-[500px]">
+<body class="md:min-w-[1280px] max-[500px]:min-w-[456px]">
     <!------------------ Header section ------------------>
     <header class="max-w-[1171px] lg:mx-auto mx-5 lg:mt-12 font-raleway">
         <nav class="navbar bg-base-100">
@@ -66,7 +66,7 @@
     <!---------------Main section  --------------->
     <main class=" mt-5 font-inter transition duration-500">
         <!-------------------- Banner section -------------------->
-        <section class="max-w-[1171px] lg:mx-auto mx-5">
+        <section class="max-w-[1171px] mx-auto max-[767px]:mx-5">
             <div
                 class="banner-bg max-w-[1171px] h-[550px] relative rounded-3xl bg-center text-center text-white md:pt-16 p-6 lg:space-y-9 space-y-6">
 
@@ -83,7 +83,7 @@
                     class="-ml-5 absolute transition-all md:-bottom-12 -bottom-1/3 text-black w-full flex md:flex-row flex-col justify-center items-center gap-6">
                     <!-- card-1 -->
                     <div
-                        class="flex items-center justify-center border border-[#22212121] hover:shadow-lg gap-3 p-7 bg-white rounded-2xl border-b-[3px] border-b-[#1DD100]">
+                        class="flex items-center w-72 justify-center border border-[#22212121] hover:shadow-lg gap-3 p-7 bg-white rounded-2xl border-b-[3px] border-b-[#1DD100]">
                         <img src="./images/people.png" alt="">
                         <div>
                             <h1 class="md:text-4xl text-2xl font-semibold md:font-bold">500k+</h1>
@@ -92,20 +92,20 @@
                     </div>
                     <!-- card-2 -->
                     <div
-                        class="flex items-center w-64 border border-[#22212121] justify-center hover:shadow-lg gap-3 p-7 bg-white rounded-2xl border-b-[3px] border-b-[#1DD100]">
+                        class="flex items-center w-72 border border-[#22212121] justify-center hover:shadow-lg gap-3 p-7 bg-white rounded-2xl border-b-[3px] border-b-[#1DD100]">
                         <img src="./images/ticket-cupon.png" alt="">
                         <div>
-                            <h1 class="md:text-4xl text-2xl font-semibold md:font-bold">500k+</h1>
+                            <h1 class="md:text-4xl text-2xl font-semibold md:font-bold">1.7 lacks</h1>
                             <p>Ticket sold</p>
                         </div>
                     </div>
                     <!-- card-3 -->
                     <div
-                        class="flex items-center border border-[#22212121] justify-center hover:shadow-lg gap-3 p-7 bg-white rounded-2xl border-b-[3px] border-b-[#1DD100]">
+                        class="flex items-center w-72 border border-[#22212121] justify-center hover:shadow-lg gap-3 p-7 bg-white rounded-2xl border-b-[3px] border-b-[#1DD100]">
                         <img src="./images/stoppage.png" alt="">
                         <div>
-                            <h1 class="md:text-4xl text-2xl font-semibold md:font-bold">500k+</h1>
-                            <p>Registered users</p>
+                            <h1 class="md:text-4xl text-2xl font-semibold md:font-bold">80K+</h1>
+                            <p>Rental partners</p>
                         </div>
                     </div>
 
@@ -114,12 +114,12 @@
             </div>
         </section>
         <!--------------- Offer section --------------->
-        <section class="lg:mt-32 mt-56 text-center lg:space-y-12 space-y-7 max-w-[1171px] lg:mx-auto mx-5">
+        <section class="lg:mt-32 mt-56 text-center lg:space-y-12 space-y-7 max-w-[1171px] mx-auto max-[767px]:mx-5">
             <h1 class="text-center text-4xl font-bold">Best offers for you</h1>
             <div class="flex md:flex-row flex-col gap-6">
                 <!------------------ card-1 ------------------>
                 <div class="md:w-1/2 w-full bg-[#FFBF0F] rounded-2xl flex ">
-                    <div class="lg:p-12 p-7 lg:mr-6 flex justify-center items-center">
+                    <div class="lg:p-12 p-5 lg:mr-6 flex justify-center items-center">
                         <div class="space-y-4">
                             <h1 class="md:text-4xl text-3xl text-start font-extrabold">15% OFF</h1>
                             <h4 class="font-bold text-nowrap"> on your next purchase</h4>
@@ -127,7 +127,7 @@
                         </div>
                     </div>
                     <img src="./images/cupon-devider.png" alt="">
-                    <div class="py-12 flex justify-center items-center px-6 lg:px-12 ">
+                    <div class="py-12 flex justify-center items-center px-4 lg:px-12 ">
                         <div class="space-y-4">
                             <h1 class="md:text-3xl text-2xl font-bold font-raleway ">NEW15</h1>
                             <p>Coupon Code</p>
@@ -137,7 +137,7 @@
                 </div>
                 <!------------------ card-2 ------------------>
                 <div class="md:w-1/2 w-full bg-[#F78C9C] rounded-2xl flex">
-                    <div class="lg:p-12 p-7 lg:mr-6 flex justify-center items-center ">
+                    <div class="lg:p-12 p-5 lg:mr-6 flex justify-center items-center ">
                         <div class="space-y-4">
                             <h1 class="md:text-4xl text-3xl text-start font-extrabold">20% OFF</h1>
                             <h4 class="font-bold text-nowrap"> on your next purchase</h4>
@@ -145,7 +145,7 @@
                         </div>
                     </div>
                     <img src="./images/cupon-devider.png" alt="">
-                    <div class="py-12 flex justify-center items-center px-6 lg:px-12 ">
+                    <div class="py-12 flex justify-center items-center px-4 lg:px-12 ">
                         <div class="space-y-4">
                             <h1 class="md:text-3xl text-2xl font-bold ">Couple 20</h1>
                             <p>Coupon Code</p>
@@ -160,17 +160,84 @@
         </section>
         <!------------- Buy ticket section ------------->
         <section id="buyTicket"
-            class="lg:mt-32 mt-10 bg-[#F7F8F8] w-full rounded-t-[84px] py-6 lg:py-32 border-t-2 border-[#1DD100]">
-            <div class="max-w-[1171px] lg:mx-auto mx-5 space-y-5">
+            class="lg:mt-32 mt-10 bg-[#F7F8F8] w-full rounded-t-[84px] py-6 lg:py-28 border-t-2 border-[#1DD100]">
+            <div class="max-w-[1171px] mx-auto  space-y-5">
                 <h1 class="text-4xl text-center font-bold">Alpha Paribahan</h1>
                 <P class="max-w-2xl mx-auto text-center">Get ready to explore! Reserve your seat with Alpha Paribahan
                     today for a hassle-free journey to your destination.</P>
-                <div>
 
-                </div>
-                <div>
+                <!------------------ Info section ------------------>
+                <section class="flex md:flex-row flex-col rounded-2xl bg-white">
+                    <div class="p-8 md:w-[75%] w-full">
+                        <div class="flex md:flex-row flex-col gap-5 justify-between">
+                            <div class="flex  gap-3">
+                                <img src="./images/bus-logo.png" alt="">
+                                <div>
+                                    <h1 class="text-3xl font-bold">Alpha Paribahan</h1>
+                                    <p>Greenline Paribahan</p>
+                                </div>
+                            </div>
+                            <a class="p-3 h-12 rounded-lg text-xl font-semibold bg-[#1dd1001a] text-[#1DD100] ">
+                                <img class="inline" src="./images/seat-green.png" alt="">
+                                <span id="seatsLeft">40</span> Seats left
+                            </a>
+                        </div>
+                        <div class="mt-6 p-8 bg-[#F7F8F8] rounded-xl">
+                            <div class="flex justify-between py-4 border-b-2 border-dashed ">
+                                <p>Route</p>
+                                <h1 class="font-semibold">Dhaka - Sylhet</h1>
+                            </div>
+                            <div class="flex justify-between py-4 border-b-2 border-dashed ">
+                                <p>Departure Time</p>
+                                <h1 class="font-semibold">9:00 PM</h1>
+                            </div>
+                            <div class="flex md:flex-row flex-col max-[767px]:gap-5 justify-between mt-4">
+                                <p class="bg-[#0307120d] p-4 mr-5 rounded-lg">Boarding Point - Laxmipur</p>
+                                <p class="bg-[#0307120d] p-4 mr-5 rounded-lg">Boarding Point - Laxmipur</p>
+                                <p class="bg-[#0307120d] p-4 rounded-lg">Boarding Point - Laxmipur</p>
+                            </div>
+                        </div>
 
-                </div>
+                    </div>
+                    <div class="flex md:w-[25%] w-full">
+                        <img class="max-[767px]:hidden" src="./images/info-devider.png" alt="">
+                        <div class="flex items-center mx-auto">
+                            <div class="text-center space-y-4">
+                                <img class="mx-auto" src="./images/fare.png" alt="">
+                                <h1 class="text-3xl font-bold">550 Taka</h1>
+                                <p class="text-2xl font-semibold">Per Seat</p>
+                            </div>
+                        </div>
+                    </div>
+
+                </section>
+                <!---------------------- select seat section ---------------------->
+                <section class="flex md:flex-row p-8 flex-col bg-white rounded-2xl">
+                    <div class="md:w-3/5 w-full md:border-r-[3px] text-[#03071280] pr-8 border-dashed">
+                        <div class="">
+                            <div class=" py-4 border-b-2 border-dashed ">
+                                <h1 class="text-xl font-semibold text-black">Select Your Seat</h1>
+
+                            </div>
+                            <div class="flex justify-between py-4 border-b-2 border-dashed ">
+                                <p class="font-semibold"><img class="inline" src="./images/seat-gray.png" alt="">
+                                    Available</p>
+                                <h1 class="font-semibold text-[#1DD100]"> <img class="inline"
+                                        src="./images/seat-green-filled.png" alt=""> Selected</h1>
+                            </div>
+                            <div class="flex justify-end mt-5">
+                                <p class="bg-[#0307120d] py-2 px-6 rounded-lg text-end"><img
+                                        src="./images/tabler-icon-steering-wheel.png" alt=""></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="md:w-2/5 w-full pl-8">
+                        <div class=" py-4 border-b-2 border-dashed ">
+                            <h1 class="text-xl font-semibold">Select Your Seat</h1>
+
+                        </div>
+                    </div>
+                </section>
             </div>
         </section>
     </main>
